# JapanEase

./: JapanEase.cabal  README.md  words.txt
app/: Main.hs
