cabal-version:      3.0
name:               JapanEase
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Pascu Ioan
maintainer:         ipascu2003@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: 
      -Wall
      -threaded
      -fno-warn-name-shadowing

executable JapanEase
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      brick,
                      vty >= 6.0,
                      vty-crossplatform,
                      microlens,
                      microlens-mtl,
                      microlens-th,
                      ghc,
                      random,
                      text-zipper

    hs-source-dirs:   app
    default-language: Haskell2010
